<resources>
    <string name="app_name">Plouf</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">History</string>
    <string name="title_Settings">Settings</string>
    <string name="drink_water_korean">물</string>
    <string name="drink_coffee_korean">커피</string>
    <string name="drink_tea_korean">차</string>
    <string name="column_water">water</string>
    <string name="column_coffee">coffee</string>
    <string name="column_tea">tea</string>
    <string name="column_peeCnt">peeCnt</string>
    <string name="column_fecesCnt">fecesCnt</string>
    <string name="column_peeAvg">peeAvg</string>
    <string name="column_fecesAvg">fecesAvg</string>
    <string name="lock_Setting_txt">앱 잠금 설정</string>
    <string name="chart_name">일일 음수량 그래프</string>
    <string name="paperCup_normal">종이컵(소)</string>
    <string name="paperCup_large">종이컵(대)</string>
    <string name="cup_small">스몰 사이즈</string>
    <string name="cup_regular">레귤러 사이즈</string>
    <string name="cup_tall">톨 사이즈</string>
    <string name="cup_grande">그란데 사이즈</string>
    <string name="cup_benti">벤티 사이즈</string>
    <string name="cup_liter">리터</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>