<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/settings_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/settings_vertical_margin"
        android:layout_marginBottom="@dimen/settings_vertical_margin"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_layout_margin_left"
            android:text="체중"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/settings_layout_margin_right"
            android:textSize="18dp"
            android:ems="10"
            android:nextFocusDown="@id/et_waterCup"
            android:inputType="number" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="kg"
            android:textSize="18dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/settings_vertical_margin"
        android:layout_marginBottom="@dimen/settings_vertical_margin"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_layout_margin_left"
            android:text="컵 용량"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_drink"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/settings_layout_margin_left"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/et_waterCup"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/settings_layout_margin_right"
            android:textSize="18dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="ml"
            android:textSize="18dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_vertical_margin"
            android:text="컵 사이즈 선택"
            android:textSize="18dp"
            android:paddingLeft="@dimen/settings_layout_margin_left"/>

    </LinearLayout>




    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginBottom="@dimen/settings_vertical_margin"
        android:paddingLeft="@dimen/settings_vertical_margin"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_paperCup_normal"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/paperCup_normal" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_paperCup_large"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/paperCup_large" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cup_small"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/cup_small" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cup_regular"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/cup_regular" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cup_tall"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/cup_tall" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cup_grande"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/cup_grande" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cup_benti"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/cup_benti" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cup_liter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/cup_liter" />


    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:id="@+id/tv_settingResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:text="TextView" />

<!--    <TextView-->
<!--        android:id="@+id/tv_openSource"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="#00902E"-->
<!--        android:gravity="right"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginRight="@dimen/settings_layout_margin_right"-->
<!--        android:text="오픈소스" />-->


</LinearLayout>